# d2llearn

./: .gitignore
linear/: data_loader.py  gen_data.py  infer.py  train.py
linear/cpp/cmake/: FindTensorRT.cmake
linear/cpp/convert/: CMakeLists.txt  main.cpp
